set background-size to cover for background gradient to try and fix issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html {
 	background-color: rgb(0,159,204);
   	background-image: radial-gradient(rgb(0,159,204), rgb(16,48,68));
   	background-attachment: fixed;
+  	background-size: cover;
 }
 
 header {
